--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,18 @@
   min-height: 100vh;
 }
 
+.body{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  width: 100%;
+}
+
+.ticketList{
+  width: 100%;
+}
+
 /* Mobile */
 @media (max-width: 700px) {
   
