--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,8 +1,9 @@
-.button{
+.filled{
     background-color: var(--support-1);
     border: none;
     padding: 12px 28px;
     border-radius: 3px;
     color: white;
-    font-size: 14px
+    font-size: 14px;
+    line-height: 18px;
 }
