--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     width: 100%;
     padding: 25.5px 60px;
-
+    background-color: var(--gray-00);
 }
 
 .actions{
