--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -6,4 +6,13 @@
     color: white;
     font-size: 14px;
     line-height: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.filled svg{
+    width: 15px;
+    height: 15px;
+    margin-left: 8px;
 }
