--- a/src/app/components/pagination/styles.module.css
+++ b/src/app/components/pagination/styles.module.css
@@ -32,3 +32,19 @@
     width: 32px;
     cursor: pointer;
 }
+
+@media (max-width: 700px) {
+    .paginationBody{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: right;
+        margin-top: 24px;
+    }
+
+    .selectPage{
+        margin: 4px 0;
+    }
+    
+}
