--- a/src/app/components/searchBar/searchBar.module.css
+++ b/src/app/components/searchBar/searchBar.module.css
@@ -12,3 +12,17 @@
     justify-content: center;
     margin-bottom: 36px;
 }
+@media (max-width: 700px) {
+    .searchBarInput{
+        background-color: var(--gray-00);
+        padding: 5px 10px;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 36px;
+    }
+}
+
+
