--- a/src/app/components/ticketList/styles.module.css
+++ b/src/app/components/ticketList/styles.module.css
@@ -112,3 +112,20 @@
     color: var(--brand-color-blue);
     font-weight: bold;
 }
+
+@media (max-width: 700px) {
+    .ticketBody{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .ticketInfos{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 33.5px 24px;
+    }
+
+}
