--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+
+@media (max-width: 700px) {
+  html,
+  body{
+    .container{
+      padding: 0 1rem 1rem 1rem ;
+    }
+}
+}
