--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,7 +21,14 @@
 
 /* Mobile */
 @media (max-width: 700px) {
-  
+  .body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+    width: 100%;
+  }
 }
 
 /* Tablet and Smaller Desktop */
