--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -36,3 +36,24 @@
 .shopCart{
     position: relative;
 }
+
+@media (max-width: 700px) {
+    .header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        padding: 5px 10px;
+        background-color: var(--gray-00);
+    }
+
+    .actions{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 16px;
+        color: var(--support-5);
+    }
+}
